--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
             align-items: center;
             padding: 20px 5%;
             background: rgba(253, 250, 245, 0.9); /* Bege fundo com transparência */
-            backdrop-filter: blur(10px);
             z-index: 1000;
             transition: 0.4s;
             border-bottom: 1px solid var(--bege-dark);
@@ -79,8 +78,8 @@
         .hero {
             height: 100vh;
             /* Gradient suave que vai do bege ao transparente para destacar o texto */
-            background: linear-gradient(rgba(253, 250, 245, 0.8), rgba(253, 250, 245, 0.4)), 
-                        url('https://images.unsplash.com/photo-1515162305285-0293e4767cc2?auto=format&fit=crop&q=80&w=1920') no-repeat center center/cover;
+            background: linear-gradient(rgba(253, 250, 245, 0.568), rgba(160, 160, 160, 0.6)), 
+                        url('./img/img-banner.jpeg') no-repeat center center/cover;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -216,16 +215,16 @@
     <nav id="navbar">
         <div class="logo">PRODÍGIOS</div>
         <div class="nav-links">
-            <a href="index.html">Início</a>
-            <a href="sobre.html">Sobre Nós</a>
-            <a href="membro.html">Seja Membro</a>
-            <a href="contribuicoes.html">Contribuições</a>
-            <a href="vivencias.html">Vivências</a>
+            <a href="./index.html">Início</a>
+            <a href="./html/sobre.html">Sobre Nós</a>
+            <a href="./html/membro.html">Seja Membro</a>
+            <a href="./html/contribuicoes.html">Contribuições</a>
+            <a href="./html/vivencias.html">Vivências</a>
 
         </div>
         <div class="social-icons">
-            <a href="#" style="color: var(--vermelho); margin-left: 15px;"><i class="fab fa-instagram"></i></a>
-            <a href="#" style="color: var(--vermelho); margin-left: 15px;"><i class="fab fa-youtube"></i></a>
+            <a href="https://www.youtube.com/@pr.rafaelsantanapegaqueede1005" style="color: var(--vermelho); margin-left: 15px;"><i class="fab fa-youtube"></i></a>
+            <a href="https://wa.me/5512992303807" style="color: var(--vermelho); margin-left: 15px;"><i class="fab fa-whatsapp"></i></a>
         </div>
     </nav>
 
@@ -238,22 +237,22 @@
     <section class="content-section">
         <h2 class="section-title">Nossa Vivência</h2>
         <div class="galeria-grid">
-            <div class="card" onclick="window.location.href='sobre.html'">
-                <img src="https://images.unsplash.com/photo-1544427920-c49ccfb85579?q=80&w=600" alt="Culto">
+            <div class="card" onclick="window.location.href='./html/sobre.html'">
+                <img src="./img/img-culto.jpeg" alt="Culto">
                 <div class="card-overlay">
                     <h3>Cultos</h3>
                     <p>Encontros Diários</p>
                 </div>
             </div>
-            <div class="card" onclick="window.location.href='sobre.html'">
-                <img src="https://images.unsplash.com/photo-1529070532901-ba8c310ecf5e?q=80&w=600" alt="Eventos">
+            <div class="card" onclick="window.location.href='./html/vivencias.html'">
+                <img src="./img/img-eventos.jpeg" alt="Eventos">
                 <div class="card-overlay">
                     <h3>Eventos</h3>
                     <p>Comunhão e Fé</p>
                 </div>
             </div>
-            <div class="card" onclick="window.location.href='sobre.html'">
-                <img src="https://images.unsplash.com/photo-1510590333219-d7d0002181cb?q=80&w=600" alt="Sobre">
+            <div class="card" onclick="window.location.href='./html/contribuicoes.html'">
+                <img src="./img/img-proposito.jpeg" alt="Sobre">
                 <div class="card-overlay">
                     <h3>Propósitos</h3>
                     <p>Nossa Missão em Cristo</p>
@@ -261,10 +260,6 @@
             </div>
         </div>
     </section>
-
-    <a href="https://wa.me/seunumeroaqui" class="whatsapp-float" target="_blank">
-        <i class="fab fa-whatsapp"></i>
-    </a>
 
     <footer>
         <p>© 2026 Igreja Missionária Fonte de Prodígios</p>
